Style - fixed the body of the page, adjusted the spacing of the Acceuil and A propos elements, changed the stars in rating, the name and first name in the Owner component are now on 2 different lines, progressive rendering of the collapse content. Docs - added a readme

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -27,11 +27,17 @@
     }
 
     &__content {
+        max-height: 0;
         background-color: #f7f7f7;
-        padding: 15px;
         font-size: 16px;
         color: #333;
         border-top: 1px solid #ddd;
+        transition: max-height 0.8s ease-in-out, opacity 0.8s ease-in-out;
+    }
+
+    &__content.open {
+        max-height: 500px;
+        opacity: 1;
     }
 }
 
@@ -65,11 +71,17 @@
         }
     
         &__content {
+            max-height: 0;
             background-color: #f7f7f7;
-            padding: 15px;
             font-size: 16px;
             color: #333;
             border-top: 1px solid #ddd;
+            transition: max-height 0.8s ease-in-out, opacity 0.8s ease-in-out;
+        }
+
+        &__content.open {
+            max-height: 500px;
+            opacity: 1;
         }
     }
 }
