--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,7 +13,7 @@
 
     &__nav {
         display: flex;
-        gap: 20px;
+        gap: 80px;
     }
 
     &__link {
@@ -48,7 +48,7 @@
     
         &__nav {
             display: flex;
-            gap: 20px;
+            gap: 30px;
         }
     
         &__link {
