--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@
 // Application des styles globaux sur l'ensemble du document
 * {
     font-family: 'Montserrat', sans-serif !important;
+    margin: 0;
 }
 
 .homepage {
@@ -41,7 +42,7 @@
         &__left {
             display: flex;
             flex-direction: column;
-            gap: 10px;  
+            gap: 25px;  
             margin-left: 5%; 
         }
 
@@ -49,7 +50,7 @@
             display: flex;
             flex-direction: column;
             align-items: flex-end; 
-            gap: 10px;
+            gap: 25px;
             padding-right: 5%;  
         }
     }
@@ -65,7 +66,8 @@
     .collapse {
         flex: 1;  
         max-width: 40%;  
-        min-width: 300px; 
+        min-width: 300px;
+        margin-top: 15px; 
     }
 }
 
@@ -136,10 +138,11 @@
             &__right {
                 display: flex;
                 flex-direction: row-reverse;
-                align-items: flex-end; 
+                align-items: center; 
                 gap: 140px;
                 padding-right: 5%;
                 padding-left: 5%;  
+                margin-top: 3%;
             }
         }
     }
